<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>systems.manifold</groupId>
  <artifactId>manifold-sample-project</artifactId>
  <version>0.1-SNAPSHOT</version>
  
  <properties>
    <manifold-version>2023.1.15-SNAPSHOT</manifold-version>
<!-- Manifold supports JDK LTS versions 8 - 17 & 20 (current release) & 21 (current EA release)  -->
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
<!-- Use this if compiling with Java 9 or later and targeting an older Java version  -->
<!-- <maven.compiler.release>6</maven.compiler.release> -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <dependencies>
<!-- Add relevant manifold runtime dependencies, compile-time dependencies are listed in annotationProcessorPath- -->
    <dependency>
      <groupId>systems.manifold</groupId>
      <artifactId>manifold-delegation-rt</artifactId>
      <version>${manifold-version}</version>
    </dependency>
    <dependency>
      <groupId>systems.manifold</groupId>
      <artifactId>manifold-props-rt</artifactId>
      <version>${manifold-version}</version>
    </dependency>
    <dependency>
      <groupId>systems.manifold</groupId>
      <artifactId>manifold-graphql-rt</artifactId>
      <version>${manifold-version}</version>
    </dependency>
    <dependency>
      <groupId>systems.manifold</groupId>
      <artifactId>manifold-xml-rt</artifactId>
      <version>${manifold-version}</version>
    </dependency>
    <dependency>
      <groupId>systems.manifold</groupId>
      <artifactId>manifold-yaml-rt</artifactId>
      <version>${manifold-version}</version>
    </dependency>
    <dependency>
      <groupId>systems.manifold</groupId>
      <artifactId>manifold-csv-rt</artifactId>
      <version>${manifold-version}</version>
    </dependency>
    <dependency>
      <groupId>systems.manifold</groupId>
      <artifactId>manifold-js-rt</artifactId>
      <version>${manifold-version}</version>
    </dependency>
    <dependency>
      <groupId>systems.manifold</groupId>
      <artifactId>manifold-collections</artifactId>
      <version>${manifold-version}</version>
    </dependency>
    <dependency>
      <groupId>systems.manifold</groupId>
      <artifactId>manifold-science</artifactId>
      <version>${manifold-version}</version>
    </dependency>
    <dependency>
      <groupId>systems.manifold</groupId>
      <artifactId>manifold-templates-rt</artifactId>
      <version>${manifold-version}</version>
    </dependency>
    <dependency>
      <groupId>systems.manifold</groupId>
      <artifactId>manifold-tuple-rt</artifactId>
      <version>${manifold-version}</version>
    </dependency>
<!-- For testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>

      <!--
       Configure the maven-compiler-plugin use Manifold.
       - add the -Xplugin:Manifold argument for the javac compiler
       - add compile-time manifold modules to javac -processorpath arg
      -->
       <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>

          <!-- version 3.8.0+ is necessary to support Java 10+ -->
          <version>3.8.0</version>

          <configuration>
            <encoding>UTF-8</encoding>
            <compilerArgs>
              <!--Add the Manifold plugin-->
              <arg>-Xplugin:Manifold</arg>
            </compilerArgs>

            <!-- Add Manifold compile-time dependencies in the processor path -->
            <annotationProcessorPaths>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-delegation</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-props</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-graphql</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-xml</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-yaml</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-csv</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-exceptions</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-image</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-properties</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-js</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-preprocessor</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-strings</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-templates</artifactId>
                <version>${manifold-version}</version>
              </path>
              <path>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-tuple</artifactId>
                <version>${manifold-version}</version>
              </path>
            </annotationProcessorPaths>

          </configuration>
        </plugin>
    </plugins>
  </build>
</project>